--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile-card">
             <div class="profile-info">
                 <div class="discord-user" id="discord-user" style="font-weight:700;font-size:1.1em;margin-bottom:0.2em;"></div>
-                <span class="discord-username" id="discord-username">copyright.txt on discord <i class="fa-solid fa-badge-check" style="color:#00e676;"></i></span>
+                <span class="discord-username" id="discord-username">idk coding or some shit <i class="fa-solid fa-badge-check" style="color:#00e676;"></i></span>
                 <div class="spotify-status" id="spotify-status" style="margin-top:0.5em;"></div>
             </div>
         </div>
